// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`import gleam style 1`] = `
[
  {
    "end": 19,
    "imports": ImportTree {
      "segments": [
        SimpleSegment {
          "args": undefined,
          "as": undefined,
          "name": "my",
        },
        SimpleSegment {
          "args": undefined,
          "as": undefined,
          "name": "foo",
        },
      ],
    },
    "kind": "treeImport",
    "start": 5,
  },
]
`;

exports[`simple fn export 1`] = `
{
  "aliases": [],
  "exports": [
    {
      "end": 12,
      "kind": "export",
      "ref": {
        "calls": [],
        "end": 55,
        "kind": "fn",
        "name": "one",
        "nameElem": {
          "end": 22,
          "kind": "fnName",
          "name": "one",
          "start": 19,
        },
        "start": 16,
        "typeRefs": [
          {
            "end": 31,
            "kind": "typeRef",
            "name": "i32",
            "start": 28,
          },
        ],
      },
      "start": 5,
    },
  ],
  "fns": [
    {
      "calls": [],
      "end": 55,
      "kind": "fn",
      "name": "one",
      "nameElem": {
        "end": 22,
        "kind": "fnName",
        "name": "one",
        "start": 19,
      },
      "start": 16,
      "typeRefs": [
        {
          "end": 31,
          "kind": "typeRef",
          "name": "i32",
          "start": 28,
        },
      ],
    },
  ],
  "globalDirectives": [],
  "imports": [],
  "kind": "text",
  "modulePath": "./test.wgsl",
  "preppedSrc": "
    export
    fn one() -> i32 {
      return 1;
    }
  ",
  "src": "
    export
    fn one() -> i32 {
      return 1;
    }
  ",
  "srcMap": SrcMap {
    "dest": "
    export
    fn one() -> i32 {
      return 1;
    }
  ",
    "entries": [
      {
        "destEnd": 58,
        "destStart": 0,
        "src": "
    export
    fn one() -> i32 {
      return 1;
    }
  ",
        "srcEnd": 58,
        "srcStart": 0,
      },
    ],
  },
  "structs": [],
  "template": undefined,
  "vars": [],
}
`;

exports[`simple fn import 1`] = `
{
  "aliases": [],
  "exports": [],
  "fns": [
    {
      "calls": [
        {
          "end": 39,
          "kind": "call",
          "name": "foo",
          "start": 36,
        },
      ],
      "end": 44,
      "kind": "fn",
      "name": "bar",
      "nameElem": {
        "end": 31,
        "kind": "fnName",
        "name": "bar",
        "start": 28,
      },
      "start": 25,
      "typeRefs": [],
    },
  ],
  "globalDirectives": [],
  "imports": [
    {
      "end": 20,
      "imports": ImportTree {
        "segments": [
          SimpleSegment {
            "args": undefined,
            "as": undefined,
            "name": "bar",
          },
          SimpleSegment {
            "args": undefined,
            "as": undefined,
            "name": "foo",
          },
        ],
      },
      "kind": "treeImport",
      "start": 5,
    },
  ],
  "kind": "text",
  "modulePath": "./test.wgsl",
  "preppedSrc": "
    import bar/foo

    fn bar() { foo(); }
  ",
  "src": "
    import bar/foo

    fn bar() { foo(); }
  ",
  "srcMap": SrcMap {
    "dest": "
    import bar/foo

    fn bar() { foo(); }
  ",
    "entries": [
      {
        "destEnd": 47,
        "destStart": 0,
        "src": "
    import bar/foo

    fn bar() { foo(); }
  ",
        "srcEnd": 47,
        "srcStart": 0,
      },
    ],
  },
  "structs": [],
  "template": undefined,
  "vars": [],
}
`;
